# nekoray

./: .clang-tidy  .gitignore  CMakeLists.txt  DEBUG_URL_TEST.md  QML_MIGRATION_STATUS.md  UPGRADE_PLAN.md  analyze_file_size.py  build_windows.ps1  build_windows.py  clean_build.py  dep_report.md  file_size_optimization_report.md  prompts_cmds.md  test_auto.ps1  test_auto_final.ps1  test_auto_full.ps1  test_auto_interactive.ps1  test_auto_run.ps1  test_auto_simple.ps1  test_auto_url_test.ps1  test_direct_api.py  test_winappdriver.ps1  test_winappdriver.py  构建.md
.cursor/commands/: bigrefac.md  push.md  run.md
.cursor/skills/file-size-limit/: SKILL.md
.github/workflows/: build-nekoray-cmake.yml  update-pkgbuild.yml  windows-build.yml
db/: ConfigBuilder.cpp  ConfigBuilder.hpp  Database.cpp  ProxyEntity.cpp  ProxyEntity.hpp
db/traffic/: TrafficData.hpp  TrafficLooper.cpp  TrafficLooper.hpp
docs/: Build_Local_Guide.md  Build_Windows.md  Build_Workflow_Comparison.md  arch.md  optimization_analysis.md  qml_migration_plan.md  构建产物与周边文件.md
docs/plans/: 2026-02-10-ensure-connect-retry-persistence.md
fmt/: AbstractBean.hpp  Bean2External.cpp  Link2Bean.cpp
go/cmd/nekobox_core/: grpc_box.go
libs/: build_core_windows.ps1  build_deps_windows.ps1  build_protobuf_windows.ps1  download_core.ps1  download_core.py  download_resources.ps1  download_resources.py
main/: NekoGui.cpp  NekoGui_DataStore.hpp  NekoGui_Utils.cpp  NekoGui_Utils.hpp  main.cpp
qml/: main.qml  qml.qrc
qml/components/: GroupItem.qml  ProxyItem.qml  ProxyTable.qml
qml/dialogs/: BasicSettingsDialog.qml  HotkeyDialog.qml  ManageGroupsDialog.qml  ManageRoutesDialog.qml  VPNSettingsDialog.qml
qml/edit/: EditChain.qml  EditNaive.qml  EditProfileDialog.qml  EditQUIC.qml  EditShadowSocks.qml  EditTrojanVLESS.qml  EditVMess.qml
qml/pages/: ConnectionPage.qml  LogPage.qml  ProxyListPage.qml
qml/theme/: Theme.qml
sub/: GroupUpdater.cpp  GroupUpdater.hpp
sys/: ExternalProcess.cpp  ExternalProcess.hpp
test/: ensure_connect_policy_test.cpp
translations/: fa_IR.ts  ru_RU.ts  zh_CN.ts
ui/: MENU_STRUCTURE.md  dialog_basic_settings.cpp  dialog_basic_settings.ui  ensure_connect_policy.cpp  ensure_connect_policy.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.bak  mainwindow_connection.cpp  mainwindow_core_download.cpp  mainwindow_core_download.h  mainwindow_core_process.cpp  mainwindow_dialog.cpp  mainwindow_ensure_connect.cpp  mainwindow_grpc.cpp  mainwindow_hotkey.cpp  mainwindow_log.cpp  mainwindow_menu.cpp  mainwindow_menubuilder.cpp  mainwindow_menubuilder.h  mainwindow_proxy_list.cpp  mainwindow_speedtest.cpp  mainwindow_status.cpp  mainwindow_stub.cpp  mainwindow_update.cpp  mainwindow_vpn.cpp
ui/edit/: dialog_edit_profile.cpp  dialog_edit_profile.h
ui/qml/: BasicSettingsController.cpp  BasicSettingsController.hpp  EditProfileController.cpp  EditProfileController.hpp  GroupModel.cpp  GroupModel.hpp  MainWindowAdapter.cpp  MainWindowAdapter.hpp  MainWindowController.cpp  MainWindowController.hpp  ProfileModel.cpp  ProfileModel.hpp  QmlTypes.cpp  QmlTypes.hpp
